# nix-wasm-rust

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix-wasm-plugin-cc/: Cargo.toml  demo.nix
nix-wasm-plugin-cc/src/: lib.rs
nix-wasm-plugin-fib/: Cargo.toml
nix-wasm-plugin-fib-wasi/: Cargo.toml
nix-wasm-plugin-fib-wasi/src/: main.rs
nix-wasm-plugin-fib-wasi/tests/: fib.nix
nix-wasm-plugin-fib/src/: lib.rs
nix-wasm-plugin-fib/tests/: fib.nix
nix-wasm-plugin-grep/: Cargo.toml
nix-wasm-plugin-grep/src/: lib.rs
nix-wasm-plugin-grep/tests/: grep.exp  grep.nix
nix-wasm-plugin-ini/: Cargo.toml
nix-wasm-plugin-ini/src/: lib.rs
nix-wasm-plugin-ini/tests/: test1.exp  test1.ini  test1.nix
nix-wasm-plugin-mandelbrot/: Cargo.toml
nix-wasm-plugin-mandelbrot/src/: lib.rs
nix-wasm-plugin-mandelbrot/tests/: test1.exp  test1.nix
nix-wasm-plugin-nix-make/: Cargo.toml  demo.nix
nix-wasm-plugin-nix-make/src/: lib.rs
nix-wasm-plugin-quickjs/: Cargo.toml
nix-wasm-plugin-quickjs/src/: lib.rs
nix-wasm-plugin-quickjs/tests/: eval.exp  eval.nix
nix-wasm-plugin-ruby/: Cargo.toml
nix-wasm-plugin-ruby/src/: lib.rs
nix-wasm-plugin-ruby/tests/: eval.nix
nix-wasm-plugin-test/: Cargo.toml
nix-wasm-plugin-test/src/: lib.rs
nix-wasm-rust/src/: lib.rs
src/: lib.rs
wasi/: Cargo.toml  flake.nix
wasm/: nix_wasm_plugin_fib.wasm  nix_wasm_plugin_fib_wasi.wasm  nix_wasm_plugin_grep.wasm  nix_wasm_plugin_ini.wasm  nix_wasm_plugin_mandelbrot.wasm  nix_wasm_plugin_quickjs.wasm  nix_wasm_plugin_test.wasm  nix_wasm_plugin_yaml.wasm
(+14 files in other folders)
