[package]
name = "nix-wasm-plugin-ruby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nix-wasm-rust = { path = "../nix-wasm-rust" }
artichoke-backend = { git = "https://github.com/artichoke/artichoke", rev = "dbeb76f881d1729a08a3e970cf57c205dcbfc03a", default-features = false, features = ["core-math"] }
